<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_horizontal"
    tools:context=".MoveWithResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:text="@string/choose_number"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:text="@string/_50"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rb_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:text="@string/_100"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rb_150"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:text="@string/_150"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rb_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:text="@string/_200"
            android:textSize="@dimen/text_size" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose" />
</LinearLayout>